# ece459

Exercise1/: Cargo.toml
Exercise1/src/: main.rs
Exercise2/: Cargo.toml
Exercise2/src/: main.rs
Exercise3/: Cargo.toml
Exercise3/src/: main.rs
Exercise4/: Cargo.toml  README.md
a1/: .gitignore  Cargo.toml  README.md  benchmark.sh
a1/inputfiles/: 1.txt  10.txt  100.txt  1000.depr  10000.depr  200.txt  300.txt  400.txt  500.txt
a1/plot/: async.txt  data.csv  main.py  synchronus.txt
a1/report/: data.csv  data2.csv  data3.csv  report.out  report.tex
a1/solved/: 1.txt  10.txt  100.txt  1000.depr  10000.depr  200.txt  300.txt  400.txt  (+1 more)
a2/: .gitignore  Cargo.toml  README.md  test_cases.txt
a2/report/: all-methods.csv  message-passing.csv  report.fdb_latexmk  report.tex  sequential.csv  shared-mem.csv
a2/src/: main.rs  message-passing.rs  shared-mem.rs
a3/: .gitignore  Cargo.toml  README.txt  build.rs  compare.py  generate.py  test.sh
a3/input/: cnn.csv
a3/kernel/: kernel.cu  kernel.ptx
a3/output/: out.csv  out_cuda.csv
a3/report/: report.tex
a3/src/: cnn.rs  cpu.rs  cuda.rs  main.rs
a4/: Cargo.toml  Makefile  README.md  new_hyperfine.txt  original.txt  original_checksum.txt  original_hyperfine.txt  run-and-verify.sh
a4/commit-log/: message.md
a4/data/: ideas-customers.txt  ideas-products.txt  packages.txt
a4/src/: checksum.rs  idea.rs  lib.rs  main.rs  package.rs  student.rs
final/: .gitignore  README.txt  ex.rs  report.tex
final/q4/: ASSUMPTIONS.md  Cargo.toml  build.rs
final/q4/input/: voters.csv
final/q4/kernel/: kernel.cu  kernel.ptx
final/q4/src/: cuda.rs  main.rs
(+38 files in other folders)
