[package]
name = "lab3"
version = "0.1.0"
authors = ["YuhanLiin <linyuhan0315@hotmail.com>", "Bernie Roehl <broehl@uwaterloo.ca"]

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustacuda = "0.1"
rustacuda_derive = "0.1"
rustacuda_core = "0.1"

csv = "1.1"
