[package]
name = "lab4"
version = "0.1.0"
authors = ["YuhanLiin <linyuhan0315@hotmail.com>", "Bernie Roehl <broehl@uwaterloo.ca"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.3"
sha2 = "0.9.1"
hex = "0.4.2"

[profile.release]
debug = false
