[package]
name = "q4"
version = "0.1.0"
authors = ["Jeff Zarnett <jzarnett@uwaterloo.ca", "Yuhan Lin <y327lin@uwaterloo.ca>"]

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustacuda = "0.1"
rustacuda_derive = "0.1"
rustacuda_core = "0.1"
rand = "0.8.3"
csv = "1.1"
